Fixed z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -86,6 +86,7 @@ img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: -1;
 }
 
 /* Button styles */
